--- a/sprint4/userDocs/Sprint4.html
+++ b/sprint4/userDocs/Sprint4.html
@@ -197,7 +197,7 @@
 	<h2>Sprint Backlog</h2>
 	<div class="remark">
 		For this fourth sprint, we will cover the following requirements:
-		<ul>
+		<ul class="requirementsList">
 			<li>Implement all mock sensors to real sensors</li>
 			<li>Make a user interface to change mock sensor values (to show better to the customer how it works)</li>
 			<li>Creation of a log to track action done in the system and exchanged messages (<k>F19</k>)</li>
@@ -212,12 +212,32 @@
 		<h3>Implement all mock sensors</h3>
 		Each sensor will remain a QActor, but this time it will be in a different context. In this way it could be
 		placed in a remote location and continue to act as the mock sensor.
-		Each sensor actor will mantain his structure and, upon request, will execute a shell command that find the
+		Each sensor actor will maintain his structure and, upon request, will execute a shell command that find the
 		temperature and prints it to stdin. At this point the QActor reads it and reply to the getValue request.
+		<br>
+		All the sensors will be connected to Raspberry Pi devices. This because they are low-cost devices with a Wi-Fi				(?)
+		chip built onboard and a complete operative system. This choice allows to push updates from remote (in opposition
+		to Arduino that requires a Wi-Fi module and must be updated on site or with an additional hardware).
+		<br>
+		The choice is a Raspberry Pi 0 WH connected to each physical device.
+		The sensors are a DS18B20 for temperature <!-- already written in problem analysis -->
+		an ultrasonic distance sensor and a weight sensor that return a number equal to 0 if there is no weight and 1
+		if there is weight (like a button). The image below represents the connections of the sensors to the
+		raspberry pis. The weight sensor needs to be connected to a pin which has a pull down resistance enabled.<br>
+		<img src="img/sensors.png" alt="Sensors schema"><br>
+		Instead, the fan is a generic device that is connected to a relay and is powered on and off by the raspberry pi.
+		This way, there are no requirements on the cooling system, except that it can be switched on and off without
+		problems. The image below represents the connections of the fan to the raspberry pi.<br>
+		<img src="img/fan.png" alt="Fan schema"><br>
+
+		ANSIBLE <a href="../devices/raspberry.yml"></a>
+
 		<h3>User interface to update mock sensor values</h3>
 		In order to allow a demonstration of the system, it was developed a small application that allow a user to
 		change the values of the mock sensors to make it possible to the developers to show how the values of
 		the sensors changes the behaviour of the system.
+		<pre>./execute.sh mockClient</pre>
+
 		<h3>Creation of a log</h3>
 		For logging, all the incoming requests to the web server are logged. Since for deployment we will use docker,
 		the docker's log mechanism will be used.<br>
@@ -230,16 +250,24 @@
 		<br>
 		All log lines will be in the format
 		<pre>DATETIME INFO [unitName] IP : endpoint : params</pre><br>
-		This way it will be possible to indentify timestamps of action and eventually investigate bugs of the system
+		This way it will be possible to identify timestamps of action and eventually investigate bugs of the system
 		or criminal attacks.
-		<h3>Log analisys</h3>
-		All log analisys will be done by an external framework that will be chosen by the customer in a future time.
+
+		<h3>Log analysis</h3>
+		All log analysis will be done by an external framework that will be chosen by the customer in a future time.
+
 		<h3>Deploy mechanism</h3>
+		The two applications, the core part and the web part, will be put inside two separate docker containers, in
+		order to distribute an application that do not need additional installation or configuration.<br>
+
 		In order to have the two docker images updated without user intervention, all the push to master on GitHub
 		will fire an action that pushes the new image to docker.io repository.<br>
 		This configuration is saved in the <a href="../../.github/workflows/docker.yaml">.github/workflows/docker.yaml</a> file.
-		NEED TO REMOVE TestUtils.setXXX() in all clients!!!
 
+		TODO:
+		- SENSORS
+		- LOGS in web
+		- ANSIBLE configuration for raspi
 	</div>
 
 	<h2>Testing</h2>
@@ -250,15 +278,18 @@
 	<h2>Execution</h2>
 	<div class="remark">
 		In order to execute the application, is now necessary, to start both the qak and web server.
-		To start the qak server, it is necessary to go to the sprint3/core folder and run
+		To start the qak server, it is necessary to go to the sprint4/core folder and run
 		<pre>./execute.bat run</pre>
 		or, on Linux
 		<pre>./execute.sh run</pre>
-		And for the web server, to go to the sprint3/web folder and run
+		And for the web server, to go to the sprint4/web folder and run
 		<pre>gradle bootRun</pre>
 		Since we are now talking with a real robot, it is even necessary to start the basicrobot actor, going into
 		the sprint3 folder and executing
 		<pre>docker-compose -f basicrobotVirtual.yaml up</pre>
+		<br>
+		As an alternative, always after starting the robot, it is now possible to execute the application as described in the
+		<a href="../../sprint0/userDocs/ParkManagerService.html#deployment">deployment section</a> of sprint0.
 	</div>
 
 	<h2>Sprint Review</h2>
@@ -277,4 +308,12 @@
 	GitHub: <a style="color: white" href="https://github.com/giuliotripi/ParkManagerService">https://github.com/giuliotripi/ParkManagerService</a>
 </div>
 </body>
+<script type="application/javascript">
+	let requirements = document.querySelectorAll('ul.requirementsList  > li > k');
+	console.log(requirements.length)
+	for (let i = 0; i < requirements.length; i++) {
+		let req = requirements[i].innerHTML;
+		requirements[i].innerHTML = "<a href='../../sprint0/userDocs/ParkManagerService.html#" + req + "'>" + req + "</a>";
+	}
+</script>
 </html>
