--- a/sprint3/userDocs/Sprint3.html
+++ b/sprint3/userDocs/Sprint3.html
@@ -234,7 +234,7 @@
 		In this sprint we have expanded the <k>working</k>, dividing it in various substates. We also decided to change
 		how it shifts between the two states <k>idle</k> and <k>working</k>: now at the end of each macro moves it goes
 		back to idle. Below is reported the Finite State Machine representation, and <a href="../core/src/model.qak">here</a>
-		can be found the equivalent representation with the qactor. <br>
+		can be found the equivalent representation with the qak model. <br>
 
 		<img src="img/trolleyFSM.png" style="max-width: 100%" alt="Transport Trolley FSM"> <br>
 
