--- a/sprint1/userDocs/Sprint1.html
+++ b/sprint1/userDocs/Sprint1.html
@@ -268,7 +268,7 @@
 					small and because it is less resource demanding. However, we have made the design modular, so if in
 					the future a database will be needed, you will only need to reimplement the interface.<br>-->
 
-					Those classes can be found in the <code style="font-size: 15px">kotlinCode</code> folder, under the
+					Those classes can be found in the <code style="font-size: 15px">risorse</code> folder, under the
 					<code style="font-size: 15px">eu.musarellatripi.domain</code> package.
 				</td>
 
