--- a/sprint2/userDocs/Sprint2.html
+++ b/sprint2/userDocs/Sprint2.html
@@ -203,8 +203,8 @@
 		The following requirements will be covered:
 		<ul class="requirementsList">
 			<li>The client can book a parking slot through ParkServiceGUI (<k>F1</k>)</li>
-			<li>When client try to do acceptIN or acceptOUT, if the transport trolley is stopped, the client should see
-				an error message (<k>F8</k>)</li>
+			<li>When client try to make an enterRequest, carEnter or pickUp, if the transport trolley is stopped, the
+				client should see an error message (<k>F8</k>)</li>
 			<li>The client can pick up the car by sending the TOKENID through ParkServiceGUI (<k>F9</k>)</li>
 			<li>The parking manager can see the current state of the parking area through ParkServiceStatusGUI (<k>F12</k>)</li>
 			<li>The parking manager should be able to stop the transport trolley when TA > TMAX through
