--- a/sprint0/userDocs/ParkManagerService.html
+++ b/sprint0/userDocs/ParkManagerService.html
@@ -324,7 +324,8 @@
 			<li>It is impossible that a user notify his interest in entering his auto in the parking-area and later changes
 				his mind and does not park in the parking area;</li>
 			<li>It is impossible that a customer reserves a parking slot and do not show up at the parking area;</li>
-			<li>When client try to do acceptIN or acceptOUT, if the transport trolley is stopped, the client should see an error message;</li>
+			<li>When client try to make an enterRequest, carEnter or pickUp, if the transport trolley is stopped,
+				the client should see an error message;</li>
 			<li>When parking manager stops the transport trolley, the transport trolley won't accept further commands
 				but finishes the move it was doing (e.g. if it is going to the INDOOR area, it reaches the INDOOR and
 				then stops accepting other requests);</li>
@@ -357,11 +358,9 @@
 		<ol>
 			<li>Client1 notify his interest in entering his auto in the parking-area.</li>
 			<li>Client2 submit the request to pick up his car but receive a notice message from the
-				application stating that another client is in the parking phase or car pickup phase and that his
-				request is in queue. The request will be served when the previous ends.</li>
+				application requesting to wait. The request will be served when the previous ends.</li>
 			<li>Afterwards, Client3 wants to enter his auto in the parking-area but receive a notice message from the
-				application stating that another client is in the parking phase or car pickup phase and that his
-				request is in queue. The request will be served when the previous ends.</li>
+				application requesting to wait. The request will be served when the previous ends.</li>
 			<li>Client2 and Client3 remain waiting.</li>
 			<li>Client1 finish his parking phase.</li>
 			<li>Without further interaction by Client2, ParkManagerService fulfills his request.</li>
@@ -372,16 +371,13 @@
 			<li>The temperature goes above TMAX</li>
 			<li>The parking-manager stops the transport trolley</li>
 			<li>Client1 notify his interest in entering his auto in the parking-area or press CARENTER. Client1 receive
-				a notice message from the application stating that the system is temporary unavailable and that the
-				web page will reload automatically as soon as the system is available again.</li>
-			<li>Client2 submit the request to pick up his car but receive a notice message from the
-				application stating that the system is temporary unavailable and that his
-				request is in queue. The request will be served when the previous ends.</li>
+				a notice message from the application stating that the system is temporary unavailable.</li>
+			<li>Client2 submit the request to pick up his car but receive a notice message from the application stating
+				that the system is temporary unavailable.</li>
 			<li>The parking-manager restart the trolley as soon as the temperature goes below TMAX</li>
-			<li>Without further interaction by Client2, ParkManagerService fulfills his request.</li>
-			<li>The application of Client1 notify him that it is now possible to try to start the parking phase.
-				At this point Client1 notify his interest in entering his auto again as if it was just arrived, without
-				record of his waiting. There is not a queue of parking request but just an event of finish of the previous one.</li>
+			<li>Client2 makes again his request and ParkManagerService fulfills it.</li>
+			<li>Client1 tries to notify again his interest in entering his auto again as if it was just arrived, without
+				record of his waiting.</li>
 		</ol>
 		<h3>Risk analysis</h3>
 
@@ -514,7 +510,8 @@
 			<li>The system can accept the request of a client to park in there only if there is at least one parking-slot
 				available, the weigthsensor don't detect a car in front of the INDOOR, and the transport trolley is either
 				at home or working</li>
-			<li>When client try to do acceptIN or acceptOUT, if the transport trolley is stopped, the client should see an error message</li>
+			<li>When client try to make an enterRequest, carEnter or pickUp, if the transport trolley is stopped, the
+				client should see an error message</li>
 			<li>The client can pick up the car by sending the TOKENID through ParkServiceGUI</li>
 			<li>The system must infer the correct parking-slot from the corresponding TOKENID</li>
 			<li>The system can accept the request of a client to pick up the car only if the TOKENID is valid, the outsonar
@@ -647,10 +644,10 @@
 				could be set using  a configuration file.
 			</li>
 		</ul>
-		Since the behaviour of the three sensors is very similar, the same software will be deployed on all the
-		devices to make it possible to communicate between the sensor and the Service. The sensor specific logic will
-		be placed in a configuration file and the actual reading from the sensor will be done by a specific program
-		called by the connector.<br>
+		<!--TODO -->
+		Since the behaviour of the three sensors is very similar, the software deployed on all the devices will have the
+		same structure, in order to make it possible to communicate between the sensor and the Service . The actual reading from the
+		sensor will be done by a specific program called by the sensors actor.<br>
 
 		<img style="max-width: 100%" src="img/sensor-interaction.png" alt="Sensor interaction">
 		<br>
@@ -708,6 +705,10 @@
 
 		<h3>Unit tests</h3>
 
+		The test plans listed here are done in
+		<a href="../../sprint1/test/eu/musarellatripi/test/TestPlan0.kt">TestPlan0</a> and in
+		<a href="../../sprint2/core/test/eu/musarellatripi/test/TestPlan2.kt">TestPlan2</a>.
+
 		<table style="width:100%" border="1">
 
 			<!-- TEST CAR ENTER (F1, F2, F3, F5, F6, F7) -->
@@ -749,8 +750,19 @@
 				</td>
 			</tr>
 
+			<tr>
+				<td>
+					<h4>testClientEnterRequestStoppedTrolley</h4>
+					The client makes an enter request, but the parking trolley is stopped. (F1, F7, F8)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The system notifies the client the problem</li>
+					</ul>
+				</td>
+			</tr>
 
-			<!-- se il trolley non è al lavoro e non è a casa? -->
+
+			<!-- TEST CAR ENTER (F3, F5, F6, F8) -->
 
 			<tr>
 				<td>
@@ -766,16 +778,26 @@
 				</td>
 			</tr>
 
-
-			<!-- TEST TRANSPORT TROLLEY (F4, F16, F17) -->
-			<!-- Test per ogni singola mossa? una sola mossa? -->
 			<tr>
 				<td>
-					<h4>testTrolleyMove</h4>
-					The ParkService send a command to the transport trolley (F4)
+					<h4>testClientCarEnterStoppedTrolley</h4>
+					The client has received SLOTNUM between 1 and 6, left the car in front of the INDOOR-area and pressed
+					CARENTER, but the parking trolley is stopped. (F3, F8)
 					<br/><b>Conditions</b>
 					<ul>
-						<li>The transport trolley moves around the parking-area and arrives in the desired location</li>
+						<li>The system notifies the client the problem</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h4>testClientCarEnterIndoorNotOccupied</h4>
+					The client has received SLOTNUM between 1 and 6 and pressed CARENTER, but didn't leave the car in
+					front of the INDOOR-area. (F6)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The ParkServiceGUI notifies the client the error</li>
 					</ul>
 				</td>
 			</tr>
@@ -823,12 +845,67 @@
 					The client request to pick up his car by submitting a valid tokenID, but the parking trolley is stopped
 					<br/><b>Conditions</b>
 					<ul>
-						<li>The system notifies the client to wait</li>
+						<li>The system notifies the client the problem</li>
 					</ul>
 				</td>
 			</tr>
 
-			<!-- TEST MANAGER (F11, F12, F13, F14, F15) -->
+			<!-- TEST MANAGER (F12, F13, F14, F15, F16) -->
+
+			<tr>
+				<td>
+					<h4>testTemperatureChangeFanOn</h4>
+					The temperature goes over TMAX. (F15)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The fan turns ON</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h4>testTemperatureChangeFanOff</h4>
+					The temperature goes under TMAX. (F15)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The fan turns OFF</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h4>testStopTrolley</h4>
+					The parking manager requests to stop the trolley and the temperature is over TMAX. (F13)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The trolley state becomes stopped (after it finish his current works)</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h4>testStopTrolleyTemperatureError</h4>
+					The parking manager requests to stop the trolley but the temperature is not over TMAX. (F13)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The system shows an error to the parking manager</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h4>testResumeTrolley</h4>
+					The parking manager requests to resume the trolley. (F14)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The trolley state becomes idle or working</li>
+					</ul>
+				</td>
+			</tr>
 
 		</table>
 	</div>
@@ -946,7 +1023,7 @@
 
 	<h2>Maintenance</h2>
 	<div class="remark">
-		As for our organization for updates, exposed in a <a href="">section of sprint4</a>, in order to update the project
+		As for our organization for updates, exposed in a <a href="../../sprint4/userDocs/Sprint4.html#deploy">section of sprint4</a>, in order to update the project
 		in docker it is necessary to push the changes to the master branch in github. The folders with the final code that
 		have to be edited are <k>web</k>, <k>core</k> and <k>sensors</k>, located in the main folder.
 	</div>
