Changes by Alessandro

--- a/sprint1/userDocs/Sprint1.html
+++ b/sprint1/userDocs/Sprint1.html
@@ -213,6 +213,7 @@
 			<li>The system must infer the correct parking-slot from the corresponding TOKENID (<k>F10</k>)</li>
 			<li>The system can accept the request of a client to pick up the car only if the TOKENID is valid, the outsonar
 				don't detect a car in front of the OUTDOOR, and the transport trolley is either at home or working (<k>F11</k>)</li>
+			<li>The TOKENID generated must be secure and not easy to guess (<k>NF1</k>)</li>
 		</ul>
 	</div>
 
