--- a/sprint0/userDocs/ParkManagerService.html
+++ b/sprint0/userDocs/ParkManagerService.html
@@ -531,7 +531,6 @@
 		<h4>Non-functional requirements</h4>
 		<ol class="custom nonfunctional">
 			<li>The TOKENID generated must be secure and not easy to guess</li>
-			<li>The system can handle one client at a time, putting on hold further requests</li>
 			<li>It should be possible to swap between real sensor and simulated mock-objects with ease</li>
 			<li>Data stored and exchanged must be protected</li>
 		</ol>
@@ -711,14 +710,14 @@
 
 		<table style="width:100%" border="1">
 
-			<!-- TEST CAR ENTER (F1, F2, F3, F5, F6, F7) -->
+			<!-- TEST ENTER REQUEST (F1, F2, F7, F8) -->
 
 			<tr>
 				<td>
 					<h4>testClientEnterRequest</h4>
 					The client requests a slot and there is one slot available, the weigthsensor don't detect a car in <!-- così (quindi bisogna controllare?) o precondizione INDOOR area is free -->
 					front of the INDOOR, and the transport trolley is either at home or working. (F1, F2, F7)
-					<br/><b>Conditions</b> <!-- e quindi questi sono anche i check|assert da fare nel test -->
+					<br/><b>Conditions</b>
 					<ul>
 						<li>The client receives 1 <= SLOTNUM <= 6</li>
 						<li>The client can move on with the booking</li>
@@ -742,7 +741,7 @@
 			<tr>
 				<td>
 					<h4>testClientEnterRequestIndoorOccupied</h4>
-					The client requests a slot but there the weightsensor still detects a car. (F1, F2, F7)
+					The client requests a slot but there the weightsensor still detects a car. (F1, F7)
 					<br/><b>Conditions</b>
 					<ul>
 						<li>The ParkServiceGUI notifies the client to wait before entering</li>
@@ -802,12 +801,13 @@
 				</td>
 			</tr>
 
-			<!-- TEST PICKUP (F8, F9, F10) -->
+
+			<!-- TEST PICKUP (F9, F10, F11) -->
 
 			<tr>
 				<td>
 					<h4>testClientPickup</h4>
-					The client request to pick up his car by submitting the tokenID, and then leave
+					The client request to pick up his car by submitting the tokenID, and then leave. (F9, F10, F11)
 					<br/><b>Conditions</b>
 					<ul>
 						<li>The tokenID is valid</li>
@@ -820,7 +820,8 @@
 			<tr>
 				<td>
 					<h4>testClientPickupOutdoorOccupied</h4>
-					The client request to pick up his car by submitting a valid tokenID, but the OUTDOOR-area is occupied
+					The client request to pick up his car by submitting a valid tokenID, but the OUTDOOR-area is occupied.
+					(F9, F10, F11)
 					<br/><b>Conditions</b>
 					<ul>
 						<li>The system notifies the client to wait</li>
@@ -831,7 +832,7 @@
 			<tr>
 				<td>
 					<h4>testClientPickupWrongToken</h4>
-					The client request to pick up his car by submitting the tokenID, but the tokenID is not valid
+					The client request to pick up his car by submitting the tokenID, but the tokenID is not valid. (F9, F10, F11)
 					<br/><b>Conditions</b>
 					<ul>
 						<li>The client receives an error from the system</li>
@@ -842,7 +843,8 @@
 			<tr>
 				<td>
 					<h4>testClientPickupStoppedTrolley</h4>
-					The client request to pick up his car by submitting a valid tokenID, but the parking trolley is stopped
+					The client request to pick up his car by submitting a valid tokenID, but the parking trolley is stopped.
+					(F8, F9)
 					<br/><b>Conditions</b>
 					<ul>
 						<li>The system notifies the client the problem</li>
